Avoid a scrollbar on inline editing

--- a/css/app/index.css
+++ b/css/app/index.css
@@ -1,5 +1,5 @@
 #stylesheet textarea { width: 100%; }
-textarea#input { width: 50%; height: 100%; display: block; }
+textarea#input { width: 50%; height: 90%; display: block; }
 
 #input-container {
 position: absolute;
